[tool.poetry]
name = "depthmap-generator"
version = "0.2.0"
description = "Depthmap evaluation from pictures with MiDaS"
authors = ["Didier Bröska <didier.broska@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = [
  {version = "^1.8.0", python = "^3.7", platform = "linux"},
  {version = "^1.8.0", python = "^3.7", platform = "win32"}
]
torchvision = [
  {version = "^0.9.0", python = "^3.7", platform = "linux"},
  {version = "^0.9.0", python = "^3.7", platform = "win32"}
]
gdown = "^3.12.2"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
pytest-cov = "^2.11.1"
safety = "^1.10.3"
mkdocs = "^1.1.2"

[tool.poetry.scripts]
depthmap-generator = "depthmap_generator.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = "tests/"

[tool.isort]
profile = "black"
include_trailing_comma="True"
force_grid_wrap="0"
use_parentheses="True"
line_length="79"

[tool.black]
line-length="79"
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
